--- a/index.Rmd
+++ b/index.Rmd
@@ -27,5 +27,5 @@ A topology on a set $X$ is a collection $\mathcal{T}$ of subsets of $X$ such tha
 (T3) The finite intersection of subsets in $\mathcal{T}$ is in $\mathcal{T}$.
 
 ```
-This is the first chapter
+This is the first chapter hths
 
