--- a/index.Rmd
+++ b/index.Rmd
@@ -308,7 +308,7 @@ Now let $[c,d)$ is element of basis of lower limit topology on $\mathbb{R}$. Now
 
 ```
 
-Note that basis element in lower limit toplogy is **not** open in the standard toplogy. But otherway around is very true. As an example, $$(1,2)=\bigcup_{n\in \mathbb{N}}[1+\frac{1}{n},2).$$ Clearly left hand side is open in lower limit topology by T2.
+Note that basis element in lower limit topology is **not** open in the standard topology. But other way around is very true. As an example, $$(1,2)=\bigcup_{n\in \mathbb{N}}[1+\frac{1}{n},2).$$ Clearly left hand side is open in lower limit topology by T2.
 
 ```{corollary}
 The lower limit topology on $\mathbb{R}$ is not comparable upper limit topology on $\mathbb{R}$.
@@ -860,7 +860,7 @@ The set $A$ is closed if and only if $A = \overline{A}$, and the latter holds if
 ### Boundary Points
 ```{definition}
 If $A \subset X$, we define the boundary of $A$ by the equation
-\[\text{Bd} \, A = \overline{A} \cap (X - A).\]
+\[\text{Bd} \, A = \overline{A} \cap \overline{(X - A)}.\]
 ```
 
 ### Hausdorff Spaces
@@ -940,7 +940,7 @@ Notataion: $x_n \to x$
   knitr::include_graphics('figures/figure 18.jpg') 
 ```
 
-```{proposition}
+```{theorem}
 Let $X$ be a Hausdorff space. If $x_n$ convergence the limit $x$ is unique.\
 In other words:  The limit of a convergent sequence in a Hausdorff space is unique.
 ```
@@ -957,15 +957,59 @@ Since $N>N_1$, then $x_N\in V$.
 Thus, $x_N\in U \cap V$. This contardict disjointness the $u$ and $V$. Thefore, $x=y$ 
 ```
 
-```{proposition}
-Let $X$ be a Hausdorff space and $A\subset X$\
+```{theorem}
+Let $X$ be a Hausdorff space and $A\subseteq X$. Then,\
 $x\in X$ is a limit point $\iff$ every neighbourhood intersect $A$ is infinetly many points.
 ```
 
 ```{proof}
-- ($\Longleftarrow$) The direction is trivial.
-- 
+- ($\Longleftarrow$) First suppose that every neighborhood of $x$ intersects $A$ in infinitely many points, it certainly intersects $A$ in some point other than $x$ itself, so that $x$ is a limit point of $A$.
+
+- ($\Longrightarrow$) Now suppose that $x$ is a limit point of $A$. We are going to use proof by contradiction. Assume that there is some neighborhood $U$ of $x$ intersects $A$ in only finitely many points. 
+Then $U$ also intersects $A - \{x\}$ in finitely many points. Let $\{x_1,..., x_m\}$ be the points of $U \cap (A - \{x\})$.
+i.e.: \[U \cap (A - \{x\})=\{x_1,..., x_m\}\]
+The set $X - \{x_1,..., x_m\}$ is an open set of $X$, since the finite point set $\{x_1,..., x_m\}$ is closed. (By pervious theorem) Then \[U \cap (X - \{x_1,..., x_m\})\] is a neighborhood of $x$ that intersects the set $A - \{x\}$ not at all. This contradicts the assumption that $x$ is a limit point of $A$.
+
 ```
+
+
+```{theorem} 
+If $X$ is a Hausdorff space, then a sequence of points of $X$ converges to at most one point of $X$.
+```
+```{proof} 
+Suppose that $x_n$ is a sequence of points of $X$ that converges to $x$. If $y \neq x$, let $U$ and $V$ be disjoint neighbourhoods of $x$ and $y$, respectively. Since $U$ contains $x_n$ for all but finitely many values of $n$. (It contain all terms with out some finetely many terms)  Since $U \cap V=\emptyset$,  the set $V$ cannot caontain those terms. Therefore, $x_n$ cannot converge to $y$.
+```
+
+```{definition,name='Limit of a sequence'}
+If the sequence $x_n$ of points of the Hausdorff space $X$ converges to the point $x$ of $X$, we often write $x_n \to x$, and we say that $x$ is the **limit** of the sequence $x_n$. 
+```
+
+```{theorem}
+- Every simply ordered set is a Hausdorff space in the order topology.
+- The product of two Hausdorff spaces is a Hausdorff space. 
+- A subspace of a Hausdorff space is a Hausdorff space.
+```
+
+```{proof}
+See exercise \@ref(exr:Hausdorff1),\@ref(exr:Hausdorff2) and \@ref(exr:Hausdorff3)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## Continuous Functions
